fix: z-index

--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   padding: 20px 0;
-  z-index: 99999;
+  z-index: 10;
 }
 
 .header.scrolled {
